<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">WiFi Direct</string>
    <string name="enable_p2p_button">P2P On/Off</string>
    <string name="discover_peers_button">Discover</string>
    <string name="connect_peer_button">Connect</string>
    <string name="disconnect_peer_button">Disconnect</string>
    <string name="get_file_button">Launch Gallery</string>
    <string name="empty"></string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="client_text">This device will act as a client. Click on Gallery button to pick a local(stored) file</string>
    <string name="empty_message">No devices found. Turn on P2P and perform discovery from the Action Bar</string>
    <string name="p2p_off_warning">Enable P2P from action bar button above or system settings</string>
    <string name="group_owner_text">"Am I the Group Owner? "</string>
    <string name="label_me">ME</string>
    <string name="label_peers">PEERS</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="telephone">Phone</string>
    <string name="email">e-mail</string>
    <string name="birthdate">Birth Date</string>
    <string name="title_activity_new_profile">NewProfileActivity</string>
    <string name="surname">Surname</string>
    <string name="registerButton">Register!</string>
    <string name="wifiManager">WiFi Manager</string>
    <string name="myProfile">My Profile</string>
    <string name="editProfile">Edit Profile</string>
    <string name="title_activity_my_friends">MyFriendsActivity</string>
    <string name="title_activity_my_profile">My Profile</string>
    <string name="title_profile_list">Profiles</string>
    <string name="title_profile_detail">Profile Detail</string>
    <string name="title_activity_friends">FriendsActivity</string>
    <string name="action_settings">Settings</string>
    <string name="remove">Remove</string>
    <string name="exchange_profiles_button">Exchange Profiles</string>
    <string name="send_message">Send a message</string>
    <string name="messageDialog">Message to send</string>
    <string name="friend_activity">FriendsActivity</string>
    <string name="btn_send">Send</string>
    <string name="button_chat">Open Chat</string>
    <string name="receivedProfile">Profile Received!</string>
    <string name="profile_notification_content">Click to see your friends!</string>
</resources>
